add dominant log (#72)